--- a/portfolio.html
+++ b/portfolio.html
@@ -308,6 +308,28 @@
               </li>
             </ul>
           </div>
+
+                    <!-- Form -->
+                    <div class="footer-form">
+                      <h2 class="footer-text">Підпишіться на розсилку</h2>
+                      <div class="form-wrap">
+                        <form class="form-container">
+                          <input 
+                            class="footer-form-imput" 
+                            type="email" 
+                            name="footer-user-email" 
+                            placeholder="E-mail" 
+                            required/>
+                          <button class="footer-form-btn" type="submit">Підписатися
+                            <svg class="footer-form-icon" width="24px" height="24px">
+                              <use href="./images/icons.svg#tg-icon"></use>
+                            </svg>
+                          </button>
+                        </form>
+                      </div>
+                    </div>
+          
+                    <!-- End -->
         </div>
       </div>
     </footer>
