--- a/index.html
+++ b/index.html
@@ -667,44 +667,55 @@
             </button>
 
 
-            <form class="form-group">
-              <strong class="form-title">Залиште свої дані, ми вам передзвонимо</strong>
+            <form class="register-form">
+              <strong class="register-form-title">Залиште свої дані, ми вам передзвонимо</strong>
+              <div class="register-form-group" role="group">
 
-              <label class="form-lable">
-                <span class="form-text">Ім'я</span>
-                <input type="text" name="user-name" autofocus/>
-                <svg class="form-icon" width="18px" height="18px">
-                  <use href=""></use>
+              <label class="register-form-wrap">
+                <span class="register-form-label">Ім'я</span>
+                <input class="register-form-input" type="text" name="user-name" autofocus/>
+                <svg class="register-form-icon" width="18" height="18">
+                  <use href="./images/icons.svg#person-black"></use>
                 </svg>
               </label>
 
-              <label class="form-lable">
-                <span class="form-text">Телефон</span>
-                <input type="tel" name="user-phone" />
-                <svg class="form-icon" width="18px" height="18px">
-                  <use href=""></use>
+              <label class="register-form-wrap">
+                <span class="register-form-label">Телефон</span>
+                <input class="register-form-input" type="tel" name="user-phone" />
+                <svg class="register-form-icon" width="18" height="18">
+                  <use href="./images/icons.svg#phone-black"></use>
                 </svg>
               </label>
 
-              <label>
-                <span class="form-text">Пошта</span>
-                <input type="email" name="user-email" />
-                <svg class="form-icon" width="18px" height="18px">
-                  <use href=""></use>
+              <label class="register-form-wrap">
+                <span class="register-form-label">Пошта</span>
+                <input class="register-form-input" type="email" name="user-email" />
+                <svg class="register-form-icon" width="18" height="18">
+                  <use href="./images/icons.svg#email-black"></use>
                 </svg>
               </label>
 
-              <label class="form-lable">
-                <span class="form-text">Коментар</span>
-                <textarea rows="5" resize="none" >Введіть текст</textarea>
+              <label class="register-form-wrap">
+                <span class="register-form-label">Коментар</span>
+                <textarea class="register-form-message" rows="5" resize="none" placeholder="Введіть текст"></textarea>
+              </label>
+              </div>
+
+              <label class="register-form-agreement">
+                <input class="register-checkbox visually-hidden" type="checkbox" name="agreement"/>
+                <svg class="register-icon" width="16" height="15">
+                  <use class="register-icon-uncheck" href="./images/icons.svg#vector"></use>
+                  <use class="register-icon-check" href="./images/icons.svg#icon-check"></use>
+                </svg>
+                <span class="register-form-agreement-text">
+                  Погоджуюся з розсилкою та приймаю
+                  <a class="register-form-agreement-link" href="">Умови договору</a>
+                  </span>                
               </label>
 
-              <label class="form-lable">
-                <span>Погоджуюся з розсилкою та приймаю<a href="">Умови договору</a></span>
-                <input type="checkbox" />
-              </label>
-
-              <button type="submit">Відправити</button>
+              <button class="register-form-btn" type="submit">
+                Відправити
+              </button>
             </form>
           </div>
         </div>
