--- a/index.html
+++ b/index.html
@@ -635,7 +635,7 @@
           <!-- Form -->
           <div class="footer-form">
             <h2 class="footer-text">Підпишіться на розсилку</h2>
-            <div class="form-wrap">
+            
               <form class="form-container">
                 <input 
                   class="footer-form-imput" 
@@ -649,7 +649,7 @@
                   </svg>
                 </button>
               </form>
-            </div>
+            
           </div>
 
           <!-- End -->
@@ -697,7 +697,7 @@
 
               <label class="register-form-wrap">
                 <span class="register-form-label">Коментар</span>
-                <textarea class="register-form-message" rows="5" resize="none" placeholder="Введіть текст"></textarea>
+                <textarea class="register-form-message" rows="5" placeholder="Введіть текст"></textarea>
               </label>
               </div>
 
